--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,19 @@
     <string name="products_unknown_category">Unassigned category</string>
     <string name="products_empty_categories">Add a category first</string>
     <string name="products_need_category_hint">You need at least one category to create products.</string>
+    <string name="products_filter_all">All</string>
+    <string name="products_filter_available">Available</string>
+    <string name="products_filter_sold">Sold</string>
+    <string name="products_status_sold">Sold</string>
+    <string name="products_status_available">Available</string>
+    <string name="view">View</string>
+    <string name="products_add_photo_gallery">Gallery</string>
+    <string name="products_add_photo_camera">Camera</string>
+    <string name="products_max_photos">Maximum of 3 photos per product.</string>
+    <string name="products_camera_error">Unable to open camera.</string>
+    <string name="products_detail_title">Product details</string>
+    <string name="action_close">Close</string>
+    <string name="products_no_photos">No photos added yet.</string>
 
 
 
@@ -50,6 +63,15 @@
     <string name="sales_payments_header">Payment history</string>
     <string name="sales_paid_in_full">Paid in full</string>
     <string name="field_quantity">Quantity</string>
+    <string name="sales_share_button">Share history</string>
+    <string name="sales_share_title">Share payment history</string>
+    <string name="sales_share_customer_info">Customer information</string>
+    <string name="sales_share_sale_total">Sale total</string>
+    <string name="sales_share_total_paid">Total payments</string>
+    <string name="sales_share_current_debt">Current debt</string>
+    <string name="sales_share_total_debt">Total debt</string>
+    <string name="sales_share_payments_title">Payments</string>
+    <string name="sales_share_generated_on">Generated on %1$s</string>
 
     <string name="add_sale_title">New sale</string>
     <string name="add_sale_step_products">Select products</string>
