--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,7 @@
     <string name="products_add_photo_camera">Camera</string>
     <string name="products_max_photos">Maximum of 3 photos per product.</string>
     <string name="products_camera_error">Unable to open camera.</string>
+    <string name="products_camera_permission_denied" translatable="false">Camera permission is required to take photos.</string>
     <string name="products_detail_title">Product details</string>
     <string name="action_close">Close</string>
     <string name="products_no_photos">No photos added yet.</string>
