--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,6 +121,33 @@
     <string name="home_summary_expenses">Expenses</string>
     <string name="home_summary_purchases">Product purchases</string>
     <string name="home_summary_profit">Profit</string>
+    <string name="home_period_title">Periodo</string>
+    <string name="home_period_today">Hoy</string>
+    <string name="home_period_last7">Últimos 7 días</string>
+    <string name="home_period_month">Mes actual</string>
+    <string name="home_period_custom">Rango personalizado</string>
+    <string name="home_period_custom_start">Elegir inicio</string>
+    <string name="home_period_custom_end">Elegir fin</string>
+    <string name="home_period_selected_range">Del %1$s al %2$s</string>
+    <string name="home_kpi_sales">Ventas</string>
+    <string name="home_kpi_expenses">Gastos</string>
+    <string name="home_kpi_gross_profit">Ganancia bruta</string>
+    <string name="home_kpi_net_profit">Utilidades</string>
+    <string name="home_kpi_sales_count">N.º de ventas</string>
+    <string name="home_kpi_avg_ticket">Ticket promedio</string>
+    <string name="home_kpi_margin">Margen %</string>
+    <string name="home_kpi_total_debt">Cartera por cobrar</string>
+    <string name="home_empty_sales">No hay ventas en este periodo.</string>
+    <string name="home_empty_expenses">No hay gastos en este periodo.</string>
+    <string name="home_empty_debt">No hay cartera pendiente en este periodo.</string>
+    <string name="home_view_more">Ver más</string>
+    <string name="home_variation_label">%1$s vs periodo anterior</string>
+    <string name="home_top_debtors_title">Clientes con más deuda</string>
+    <string name="home_top_empty_debtors">No hay clientes con deuda en este periodo.</string>
+    <string name="home_top_expense_categories_title">Categorías con más gasto</string>
+    <string name="home_top_empty_categories">No hay gastos registrados en este periodo.</string>
+    <string name="home_trend_title">Tendencia de ventas vs gastos</string>
+    <string name="home_trend_empty">Sin datos suficientes para mostrar la gráfica.</string>
 
     <plurals name="customers_count">
         <item quantity="one">%d customer</item>
